--- a/packages/noir/Nargo.toml
+++ b/packages/noir/Nargo.toml
@@ -5,3 +5,4 @@ type = "bin"
 [dependencies]
 # Semaphore-noir
 semaphore_batch_2_leaves = { tag = "main", git = "https://github.com/hashcloak/semaphore-noir", directory = "./packages/noir-proof-batch/circuits/batch_2_leaves" }
+semaphore_batch_2_leaves = { tag = "main", git = "https://github.com/hashcloak/semaphore-noir", directory = "./packages/noir-proof-batch/circuits/batch_2_nodes" }
